add bssid, signal and beacon

--- a/README.adoc
+++ b/README.adoc
@@ -6,26 +6,39 @@ Friendly front-end to `iwlist` for wireless network scanning & troubleshooting.
 == In action
 
  $ wifi-scan -k channel
- +------+---------+-----------+---------+---------------------------------+
- | cell | channel | frequency | quality | essid                           |
- +------+---------+-----------+---------+---------------------------------+
- | 14   | 1       | 2.412     | 44      | SNewSt2R                        |
- | 7    | 6       | 2.437     | 41      | MOTOROLA-Cxxx4                  |
- | 8    | 6       | 2.437     | 44      | SomeCleverWiFiName              |
- | 2    | 8       | 2.447     | 100     | mytroubledwifi                  |
- | 3    | 8       | 2.447     | 100     | dejaloya                        |
- | 9    | 8       | 2.447     | 100     |                                 |
- | 10   | 11      | 2.462     | 88      | The Jam 2.4G                    |
- | 1    | 36      | 5.18      | 100     | mytroubledwifi-5GHz             |
- | 6    | 36      | 5.18      | 44      | DIRECT-C1-HP OfficeJet Pro 9010 |
- | 11   | 36      | 5.18      | 44      |                                 |
- | 12   | 36      | 5.18      | 44      | yoyoyo                          |
- | 13   | 36      | 5.18      | 44      | XFINITY                         |
- | 15   | 36      | 5.18      | 44      | Lindsey                         |
- | 4    | 48      | 5.24      | 72      | The Jam 5G                      |
- | 5    | 153     | 5.765     | 44      | xfinitywifi                     |
- | 16   | 153     | 5.765     | 44      | thisnetworkisalsohere           |
- +------+---------+-----------+---------+---------------------------------+
++------+-------------------+---------+-----------+---------+---------+------------------+---------+
+| cell | bssid             | channel | frequency | quality | signal  | essid            | beacon  |
++------+-------------------+---------+-----------+---------+---------+------------------+---------+
+| 1    | 86:EA:ED:BF:F7:0B | 6       | 2.437     | 51      | -74 dBm |                  | 132     |
+| 2    | 06:5F:67:57:E5:1A | 7       | 2.442     | 51      | -74 dBm |                  | 212     |
+| 3    | 5C:B0:66:17:9D:F1 | 6       | 2.437     | 42      | -80 dBm | LoveJesus1       | 276     |
+| 4    | 7E:B0:66:17:9D:F1 | 6       | 2.437     | 37      | -84 dBm |                  | 200     |
+| 5    | A0:A3:E2:AC:60:F8 | 6       | 2.437     | 38      | -83 dBm | CenturyLink3508  | 472     |
+| 6    | C0:94:35:3E:F0:62 | 6       | 2.437     | 97      | -42 dBm | Netsuite2525     | 1764468 |
+| 7    | 00:5F:67:57:E5:1A | 7       | 2.442     | 48      | -76 dBm | Frosty           | 160     |
+| 8    | C0:94:35:3E:F0:62 | 6       | 2.437     | 98      | -41 dBm |                  | 148     |
+| 9    | C6:94:35:3E:F0:62 | 6       | 2.437     | 98      | -41 dBm |                  | 152     |
+| 10   | CE:94:35:3E:F0:62 | 6       | 2.437     | 100     | -39 dBm |                  | 152     |
+| 11   | 6E:54:25:B9:56:06 | 6       | 2.437     | 47      | -77 dBm |                  | 184     |
+| 12   | D6:94:35:3E:F0:62 | 6       | 2.437     | 100     | -40 dBm |                  | 148     |
+| 13   | 9E:B0:66:17:9D:F1 | 6       | 2.437     | 41      | -81 dBm |                  | 252     |
+| 14   | D4:B9:2F:BA:40:66 | 6       | 2.437     | 32      | -87 dBm |                  | 264     |
+| 15   | 14:59:C0:B5:0F:41 | 11      | 2.462     | 62      | -66 dBm | NETGEAR80        | 20      |
+| 16   | FA:8F:CA:99:AF:7E | 11      | 2.462     | 61      | -67 dBm |                  | 16      |
+| 17   | D4:B9:2F:BA:40:63 | 6       | 2.437     | 34      | -86 dBm | Arcadia Park NYC | 264     |
+| 18   | A0:A3:E2:19:7B:25 | 1       | 2.412     | 44      | -79 dBm | CenturyLink1180  | 1744    |
+| 19   | A8:B0:88:14:88:E8 | 2       | 2.417     | 100     | -35 dBm | TP-LINK 61       | 1440    |
+| 20   | D4:B9:2F:BA:40:68 | 6       | 2.437     | 32      | -87 dBm |                  | 256     |
+| 21   | 88:AD:43:95:FE:70 | 11      | 2.462     | 54      | -72 dBm | Casa de Zoey     | 52      |
+| 22   | 0C:83:CC:F7:A6:99 | 6       | 2.437     | 25      | -92 dBm | tlf7a699         | 244     |
+| 23   | 70:54:25:B9:56:06 | 6       | 2.437     | 45      | -78 dBm | MAGA             | 212     |
+| 24   | FA:8F:CA:7B:CB:15 | 11      | 2.462     | 45      | -78 dBm |                  | 36      |
+| 25   | 76:54:25:B9:56:06 | 6       | 2.437     | 45      | -78 dBm |                  | 200     |
+| 26   | 6C:72:20:3D:53:80 | 6       | 2.437     | 27      | -91 dBm | dlink-5380       | 204     |
+| 27   | A2:AD:43:95:FE:70 | 11      | 2.462     | 51      | -74 dBm |                  | 24      |
+| 28   | 02:6A:E3:E9:E0:C1 | 11      | 2.462     | 41      | -81 dBm | CenturyLink8296  | 44      |
++------+-------------------+---------+-----------+---------+---------+------------------+---------+
+
 
 
 == Install
